[tool.poetry]
name = "seohub-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Aputalabashuneba"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
aiogram = "^3.1.1"
pytube = "^15.0.0"
google-api-python-client = "^2.103.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
